Prevent page background colour showing behind Header component
While the header's content is transitioning back into place, the page's background colour was showing through, so I've just put a solid <div> behind the header with the same background colour as the header to prevent this.

--- a/packages/frontend/src/features/Header/index.module.css
+++ b/packages/frontend/src/features/Header/index.module.css
@@ -1,3 +1,16 @@
+.base {
+    position: relative;
+}
+
+.background {
+    position: absolute;
+    top: 0px;
+
+    background-color: var(--site-colour-secondary, rgb(255, 236, 218));
+
+    width: 100%;
+}
+
 .header {
     top: 0px;
     z-index: 100;
